# SFML_TEST

./: CMakeLists.txt  build.sh  main.cpp
includes/bodies/: BodyGenerator.cpp  BodyGenerator.h
includes/qtree/: BoundingBox.cpp  BoundingBox.h  QuadTree.cpp  QuadTree.h
includes/renderer/: Renderer.cpp  Renderer.h
includes/universe/: Universe.h  universe.cpp
